
[package]
name = "cryptoquest-arbitrage"
version = "0.1.0"
edition = "2021"

[lib]
name = "arbitrage_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
web3 = "0.19"
rand = "0.8"
thiserror = "1.0"
hex = "0.4"
ethabi = "18.0"
secp256k1 = "0.27"

[build-dependencies]
cc = "1.0"
