[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "eth-account>=0.13.7",
    "fastapi>=0.115.14",
    "joblib>=1.5.1",
    "numpy<2.0",
    "pandas>=2.3.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.14.0",
    "uvicorn>=0.35.0",
    "web3>=7.12.0",
    "websockets>=15.0.1",
]
